# use_cmake

./: run.bat
src/: CMakeLists.txt  cmake_app.cpp  cmake_app.h  config.h  config.h.in  test.h
src/math/: CmakeLists.txt  circle.cpp  circle.h
src/test/: test.h
